# rustlets

./: .gitignore  Cargo.toml  README.md  cwtfuncs.py  pyproject.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs  waveletanalysis.rs
test/queenofthenight/: freqshift.py  makeherbass.py  numericalmethods.py  python  queenaudio.opus
