[package]
name = "rustlets"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustlets"
crate-type = ["cdylib"]

[dependencies]
num = "~0.4.0"
num-complex = "~0.4.3"
rustfft = "~6.1.0"
pyo3 = { version = "0.18.1", features = ["extension-module", "num-complex"] }
num-traits = "~0.2"
ndarray="~0.15.6"
numpy="~0.18"

[profile.release]
opt-level="s"
lto="fat"
codegen-units=1
